--- a/index.html
+++ b/index.html
@@ -150,6 +150,8 @@
             </ul>
         </section>
 
+        <image class="flying2" src="piper-pa-44-seminole.svg"></image>
+
         <section>
             <h2>Home Airport</h2>
             <p>TODO embed open map directions or something...</p>
