wow, look at the cloud while resizing! It's moving through the displacement filter!

--- a/index.html
+++ b/index.html
@@ -58,23 +58,23 @@
             
             .cloud {
                 border-radius: 50%;
-                width: 400px;
-                height: 200px;
+                width: 50vmin;
+                height: 25vmin;
                 position: absolute;
-                top: -320px;
-                left: -320px;
+                top: 0;
+                left: 0;
                 z-index: 0;
             }
             .light {
-                box-shadow: 400px 400px 30px 1px #FFF;
+                box-shadow: 50vmin 50vmin 30px 0px #FFF;
                 filter: url(#cloud-light);
             }
             .dim {
-                box-shadow: 400px 440px 30px -60px #7777;
+                box-shadow: 50vmin 55vmin 30px -60px #7777;
                 filter: url(#cloud-dim);
             }
             .dark {
-                box-shadow: 400px 470px 30px -80px #FFF7;
+                box-shadow: 50vmin 60vmin 30px -80px #FFF7;
                 filter: url(#cloud-dark);
             }
 
