--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
         <title>Clouds</title>
         <script src="../d3/d3.min.js"></script>
         <style>
+            :root {
+                --cloud-size: 40vw;
+                --cloud-period: 30000ms;
+                --cloud-fluffy: 2em;
+            }
             main {
                 /* thanks jrl.ninja */
                 max-width: 38rem;
@@ -50,41 +55,57 @@
                     #f57536 95%,
                     #2d282e 100%
                 );
+                overflow-x: hidden;
             }
             
             .cloud {
                 border-radius: 50%;
-                width: 50vmin;
-                height: 25vmin;
+                width: var(--cloud-size);
+                height: calc( var(--cloud-size) * 0.5);
                 position: absolute;
-                top: 10vmin;
-                left: -50vmin;
+                top: 10vw;
+                /* left: calc( var(--cloud-size) * -1.0); */
+                /*- 100vw ); */
                 z-index: 0;
                 background-color: transparent;
             }
             .light {
-                box-shadow: 100vmin 0vmin 2em 0px #FFF;
+                box-shadow: 100vw 0vw 2em 0px #FFF;
                 filter: url(#cloud-light);
-                animation-duration: 20000ms;
+                animation-duration: var(--cloud-period);
                 animation-name: drift;
                 animation-iteration-count: infinite;
                 animation-timing-function: linear;
             }
             @keyframes drift {
-                from { box-shadow: 0vmin 0vmin 2em 0px #FFF; }
-                to { box-shadow: 150vmin 0vmin 2em 0px #FFF; }
+                from {
+                    box-shadow: 50vw 0vw 2em 0px #FFF;
+                    left: -50vw;
+                    /* left: calc( var(--cloud-size) * -1.0 ); */
+                }
+                to {
+                    box-shadow: 100vw 0vw 2em 0px #FFF;
+                    left: 0vw;
+                    /* left: calc( 70vw + var(--cloud-size) ); */
+                }
             }
             .dim {
-                box-shadow: 100vmin 5vmin 2em -60px #7777;
+                /* box-shadow: 100vw 5vw 2em -60px #7777; */
                 filter: url(#cloud-dim);
-                animation-duration: 20000ms;
+                animation-duration: var(--cloud-period);
                 animation-name: dim-drift;
                 animation-iteration-count: infinite;
                 animation-timing-function: linear;
             }
             @keyframes dim-drift {
-                from { box-shadow: 0vmin 5vmin 2em -60px #7777; }
-                to { box-shadow: 150vmin 5vmin 2em -60px #7777; }
+                from {
+                    box-shadow: 50vw 5vw 2em -60px #7777;
+                    left: -50vw;
+                }
+                to {
+                    box-shadow: 100vw 5vw 2em -60px #7777;
+                    left: 0vw
+                }
             }
             /* .dark {
                 box-shadow: 100vmin 10vmin 2em -80px #FFF7;
