--- a/scroll-ring.html
+++ b/scroll-ring.html
@@ -11,6 +11,12 @@
                 fill: none;
                 stroke: #ffee96;
             }
+            section {
+                max-width: 40rem;
+                padding: 2rem;
+                margin: auto;
+                padding-bottom: 0;
+            } /* thanks jrl.ninja*/
         </style>
     </head>
 
