--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                         Piper PA28-181 Archer
                     </textPath>
                 </text>
+                <!-- thanks to jrl.ninja for this trick -->
                 <!-- TODO Split the image instead of the circle so you can rotate the text freely... -->
             </svg>
         </section>
@@ -102,11 +103,7 @@
             <p>TODO embed open map directions or something...</p> -->
         </section>
     </main>
-
-    <!-- <div class="test">
-        teswtalskdjflaksj
-    </div> -->
-
+    
     <footer>
         <image src="piper-j3-cub.svg" ></image>
     </footer>
